# parallel-computing

./: CMakeLists.txt  README.md
hw1/: main.c  main.h  matrix.c  matrix.h  parallel.c  parallel.h  parser.c  parser.h  serial.c  serial.h  stopwatch.c
hw1/Debug/: generator.py  generator.py~  graphInput128  graphInput16  graphInput256  graphInput32  graphInput512  graphInput64  graphOutputReference1024  graphOutputReference128  graphOutputReference16  graphOutputReference256  graphOutputReference32  graphOutputReference512  graphOutputReference64  test-script.sh
hw2/: firewall.c  firewallImpl.c  firewallImpl.h  queue.c  queue.h  test.c
hw2/Debug/: ParallelHW2  ParallelHW2Test
hw2/Release/: common.py  e3.sh  e4.sh  e5.sh  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  experiment1.csv  experiment2.csv  experiment3.csv
hw3/: counter.c  counterImpl.c  counterImpl.h  firewall.c  firewallImpl.c  firewallImpl.h  locks.c  locks.h  queue.c  queue.h  test.c
hw3/Release/: common.py  e1.sh  e2.sh  e3.sh  e4.sh  e5.sh  e6.sh  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  exp6.py
hw4/: HW4Results.xlsx  firewall.c  firewallImpl.c  firewallImpl.h  locks.c  locks.h  queue.c  queue.h  serialLinkedList.c  serialLinkedList.h  test.c
hw4/Release/: callgrind.out.12175  common.py  e1.sh  e2.sh  e3.sh  e3a.sh  e3b.sh  e3c.sh  exp1.py  exp2.py  exp3.py  exp3a.py  exp3b.py  exp3c.py  experiment1.csv  experiment2.csv  experiment3.csv
lib/: coarsehashtable.c  coarsehashtable.h  concurrentList.c  concurrentList.h  concurrenthashtable.c  concurrenthashtable.h  crc32.c  fingerprint.c  generators.c  generators.h  hashgenerator.c  hashgenerator.h  hashpacketworker.c  hashpacketworker.h  hashtable.c  hashtable.h  packetsource.c  packetsource.h  paddedprim.h  statistics.c  statistics.h  stopwatch.c  stopwatch.h
